found a workaround for z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
+  // z-index: 0;
 }
 
 nav img {
@@ -24,12 +25,6 @@ nav img {
 
 .scrollspy {
   z-index: 0;
-}
-
-#faq,
-#contact {
-  position: relative;
-  z-index: -10;
 }
 
 #hero {
